name:               hormone-therapy-info
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , hakyll-sass
                  , pandoc
                  , pandoc-types
                  , pandoc-citeproc
                  , regex-tdfa
                  , process
  ghc-options:      -threaded
  default-language: Haskell2010
