name:               hormone-therapy-info
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 2

executable site
  main-is:          site.hs
  build-depends:    base >= 4.13.0 && < 4.15
                  , hakyll ^>= 4.13.3
                  , hakyll-sass ^>= 0.2.4
                  , pandoc ^>= 2.9.1
                  , pandoc-types ^>= 1.20
                  , pandoc-citeproc >= 0.16 && <0.18
                  , pandoc-crossref ^>= 0.3.6
                  , regex-tdfa ^>= 1.3.1
                  , process ^>= 1.6.8
                  , pandoc-url2cite-hs ^>= 0.1.0
  ghc-options:      -threaded
  default-language: Haskell2010
